tests/models/enum/named/vec/fail/max_length.stderr
error: Support condition is min_items, max_items, alias and validate
 --> tests/models/enum/named/vec/fail/max_length.rs:6:9
  |
6 |         value: Vec<()>
  |         ^^^^^
